[package]
name = "ipqis-common"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Queryable Interactive Service "
documentation = "https://docs.rs/ipqis"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipqis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
